Initial checkin of the Hadoop ZooKeeper barclamp.

--- a/chef/cookbooks/pig/README.rdoc
+++ b/chef/cookbooks/pig/README.rdoc
@@ -1,6 +1,6 @@
 = DESCRIPTION:
 
-A platform for analyzing large data sets that consists of a high-level language
+Platform for analyzing large data sets that consists of a high-level language
 for expressing data algorithms.
 
 = REQUIREMENTS:
