--- a/chef/cookbooks/pig/README.rdoc
+++ b/chef/cookbooks/pig/README.rdoc
@@ -31,4 +31,6 @@ for expressing data algorithms.
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+# Author: Paul Webster
+#
  
